--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0",
+    "nanoid": "^5.0.4",
     "sequelize": "^6.29.0",
     "sharp": "^0.33.0",
-    "validatorjs": "^3.22.1"
+    "socket.io": "^4.7.4",
+    "validatorjs": "^3.22.1",
+    "ws": "^8.16.0"
   }
 }
