--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.2.0",
     "jsonwebtoken": "^9.0.0",
     "midtrans-client": "^1.3.1",
     "multer": "^1.4.5-lts.1",
